[package]
name = "form-macro"
version = "0.1.0"
authors = ["thomas <thomas@dooms.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }
proc-macro2 = "1.0"

seed = "0.8"
components = { path = "../components" }