[package]
name = "frontend_test"
version = "0.1.0"
authors = ["thomas <thomas@dooms.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.8"
frontend = { path = "../frontend" }